--- a/src/home.scss
+++ b/src/home.scss
@@ -77,7 +77,7 @@
     left: 0;
     top: 0;
     width: $elW;
-    height: 100%;
+    height: 450px;
     background: #252525;
     transition: transform $moveAT $expandAT, width $expandAT, opacity $moveAT $expandAT, z-index 0s $moveAT + $expandAT;
     will-change: transform, width, opacity;
@@ -271,8 +271,8 @@
       left: 0;
       bottom: $vertPad * -1;
       width: 100%;
-      height: 100%;
-      min-height: 250px;
+      height: 20%;
+      //min-height: 50p2x;
       text-align: center;
       font-size: 10vw / $numOfEls;
       line-height: 0.85;
