fix switch screen

--- a/src/home.scss
+++ b/src/home.scss
@@ -5,10 +5,13 @@
   }
 
   body {
-    background: #1f1f1f;
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   }
   
+  .home-background {
+    background: #1f1f1f;
+  }
+
   $vertPad: 80px;
   $sidePad: 70px;
   
