--- a/src/components/Schedule/Table.scss
+++ b/src/components/Schedule/Table.scss
@@ -12,11 +12,12 @@
         width: 90%;
         position: relative;
         left: 45%;
-        top: 45%;
+        top: 35%;
         transform: translate(-50%, -50%);
         table {
             td {
                 width: 30px;
+                font-size: 15px;
             }
             tr {
                 height: 30px;
