--- a/src/components/Schedule/Table.scss
+++ b/src/components/Schedule/Table.scss
@@ -11,12 +11,12 @@
     .container {
         width: 90%;
         position: relative;
-        left: 45%;
-        top: 35%;
         transform: translate(-50%, -50%);
+        top: 45%;
+        left: 45%;
         table {
             td {
-                width: 30px;
+                max-width: 30px;
                 font-size: 15px;
             }
             tr {
