--- a/src/components/Student/Student.scss
+++ b/src/components/Student/Student.scss
@@ -22,10 +22,11 @@
     display: flex;
     flex-direction: row;
   }
+
   form {
     display: flex;
     border: 1px solid #f1f1f1;
-    width: 30%;
+    width: 25%;
     margin: 20px 0 0 20px;
     border-radius: 15px;
     background-color: white;
@@ -188,8 +189,8 @@
     display: none;
   }
   .table_flex {
-    margin: 20px 5% 0 5%;
-    width: 80%;
+    margin: 20px 3% 0 3%;
+    width: 75%;
   }
   .table {
     box-shadow: 0 0 6px 1.5px #888888;
@@ -198,8 +199,9 @@
     flex-wrap: wrap;
     background-color: white;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      "Helvetica Neue", Arial, sans-serif;
+    font-size: 19px;
     font-weight: 400;
     line-height: 1.5;
     border-radius: 13px;
@@ -215,19 +217,23 @@
       width: 100%;
       border-top-left-radius: 13px;
       border-top-right-radius: 13px;
+      font-weight: bold;
     }
     .row {
       display: inline-flex;
       width: 100%;
       box-sizing: border-box;
+      justify-content: center;
+      align-items: center;
       border-bottom: 1px solid #999;
-      height: 48px;
+      // height: 45px;
+      max-height: 60px;
     }
     .column {
-      padding: 10px;
+      padding: 10px 7px 10px 7px;
       text-align: center;
       &:nth-child(1) {
-        width: 15%;
+        width: 12%;
       }
       &:nth-child(2) {
         width: 49%;
@@ -239,10 +245,10 @@
         width: 5%;
       }
       &:nth-child(5) {
-        width: 6%;
+        width: 8%;
       }
       &:nth-child(6) {
-        width: 12%;
+        width: 10%;
       }
     }
     .icon {
@@ -271,12 +277,14 @@
       }
     }
     .column {
-      &:nth-child(2) {
+      &:nth-child(1) {
         border-right: 1px dashed #999;
-        border-left: 1px dashed #999;
+      }
+      &:nth-child(2) {
         width: 49%;
       }
       &:nth-child(3) {
+        border-left: 1px dashed #999;
         border-right: 1px dashed #999;
         width: 8%;
       }
@@ -286,10 +294,10 @@
       }
       &:nth-child(5) {
         border-right: 1px dashed #999;
-        width: 6%;
+        width: 8%;
       }
       &:nth-child(6) {
-        width: 12%;
+        width: 10%;
       }
     }
   }
