Update student ID screen
update requirement for input form

--- a/src/components/Student/StudentID.scss
+++ b/src/components/Student/StudentID.scss
@@ -186,8 +186,8 @@
     color: black;
   }
 
-  .form__field:focus
-  // .form__field:hover 
+  .form__field:focus,
+  .form__field:hover 
   {
     ~ .form__label {
       position: absolute;
