--- a/src/components/Student/Student.scss
+++ b/src/components/Student/Student.scss
@@ -3,7 +3,7 @@
   background: linear-gradient(0deg, #ffffff, #f37d7d);
   height: 100%;
   margin: 0;
-  overflow: scroll;
+  overflow: hidden;
 
   input::-webkit-outer-spin-button,
   input::-webkit-inner-spin-button {
@@ -217,6 +217,7 @@
   .table {
     box-shadow: 0 0 6px 1.5px #888888;
     width: 100%;
+    // height: 100vh;
     display: flex;
     flex-wrap: wrap;
     background-color: white;
@@ -227,11 +228,17 @@
     font-weight: 400;
     line-height: 1.5;
     border-radius: 13px;
-    .table-body {
-      display: flex;
+    .table-body-scroll{
+      max-height: 70vh;
+      overflow: scroll;
       width: 100%;
-      color: #808080;
-      flex-wrap: wrap;
+      .table-body {
+        display: flex;
+        width: 100%;
+        color: #808080;
+        flex-wrap: wrap;
+        overflow: scroll;
+      }
     }
     .table-header {
       background-color: #6dabe4;
