--- a/src/components/Student/StudentID.scss
+++ b/src/components/Student/StudentID.scss
@@ -3,9 +3,10 @@
   // background: linear-gradient(0deg, #fdfcfb , #e2d1c3);
   background: linear-gradient(0deg, #cfd9df, #e2ebf0);
 
-  height: 100%;
+  height: 100vh;
   margin: 0;
-  overflow: scroll;
+  overflow: hidden;
+  width: 100vw;
   input::-webkit-outer-spin-button,
   input::-webkit-inner-spin-button {
     -webkit-appearance: none;
