--- a/src/components/Student/StudentID.scss
+++ b/src/components/Student/StudentID.scss
@@ -17,6 +17,11 @@
     flex-direction: column;
   }
 
+  p{
+    color: red;
+    font-style: italic;
+  }
+
   .input-form {
     display: flex;
     flex-direction: column;
