--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -4,8 +4,8 @@
   $shdow-gray: #d3d3d5;
   $orange: #DA4D1D;
   $blue: #2b26c3;
-  $img-url2: './lecturer.webp';
-  $img-url: './student.jpg';
+  $img-url2: './lecturer2.jpeg';
+  $img-url: './student2.jpg';
 
   height: 100%;
   width: 100%;
@@ -45,51 +45,54 @@
     flex-direction: column;
   
     .card {
+      background-image: url($img-url);
+      background-size: cover;
+      background-position: center center;
       position: relative;
-      width: 800px;
-      height: 250px;
+      width: 50vw;
+      height: 35vh;
       background-color: #fff;
       overflow: hidden;
       margin-bottom: 4px;
   
-      &:before {
-        content: "";
-        z-index: 99;
-        position: absolute;
-        top: -10px;
-        left: 32px;
-        display: block;
-        width: 16px;
-        height: 16px;
-        border-radius: 16px;
-        background-color: $bg-color;
-      }
-      &:after {
-        content: "";
-        z-index: 99;
-        position: absolute;
-        bottom: -10px;
-        left: 32px;
-        display: block;
-        width: 16px;
-        height: 16px;
-        border-radius: 16px;
-        background-color: $bg-color;
-      }
-      ul {
-        z-index: 99;
-        position: absolute;
-        left: 39px;
-        top: 5px;
-        list-style-type: none;
-        li {
-          width: 2px;
-          height: 2px;
-          border-radius: 2px;
-          margin: 6px 0;
-          background-color: $bg-color;
-        }
-      }
+      // &:before {
+      //   content: "";
+      //   z-index: 99;
+      //   position: absolute;
+      //   top: -10px;
+      //   left: 32px;
+      //   display: block;
+      //   width: 16px;
+      //   height: 16px;
+      //   border-radius: 16px;
+      //   background-color: $bg-color;
+      // }
+      // &:after {
+      //   content: "";
+      //   z-index: 99;
+      //   position: absolute;
+      //   bottom: -10px;
+      //   left: 32px;
+      //   display: block;
+      //   width: 16px;
+      //   height: 16px;
+      //   border-radius: 16px;
+      //   background-color: $bg-color;
+      // }
+      // ul {
+      //   z-index: 99;
+      //   position: absolute;
+      //   left: 39px;
+      //   top: 5px;
+      //   list-style-type: none;
+      //   li {
+      //     width: 2px;
+      //     height: 2px;
+      //     border-radius: 2px;
+      //     margin: 6px 0;
+      //     background-color: $bg-color;
+      //   }
+      // }
       h2 {
         z-index: 99;
         font-family: "Poppins", sans-serif;
@@ -98,88 +101,47 @@
         right: 130px;
         font-size: 60px;
         font-weight: 700;
-        color: #fff;
+        color: #ffffff;
       }
   
       .fa-arrow-right {
         z-index: 100;
         position: absolute;
         right: 75px;
-        bottom: 25px;
+        bottom: 10px;
         font-size: 40px;
         cursor: pointer;
       }
-      p {
-        z-index: 99;
-        position: absolute;
-        top: 20px;
-        right: 70px;
-        color: #333;
-        opacity: 0.7;
-        font-size: 12px;
-        letter-spacing: 1px;
-        writing-mode: vertical-lr;
-        -webkit-transition: all 0.2s ease;
-        transition: all 0.2s ease;
-      }
-      .pic {
-        z-index: 100;
-        width: 800px;
-        height: 400px;
-        background-image: url($img-url);
-        background-size: 100% 100%;
-        filter: grayscale(30%);
-      }
-  
-      .social {
-        position: absolute;
-        left: 60px;
-        top: 0;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-pack: distribute;
-        justify-content: space-around;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        width: 180px;
-        height: 64px;
-        border-radius: 80px;
-      }
-  
-      .social i:nth-of-type(1) {
-        -webkit-transition-delay: 0.4s;
-        transition-delay: 0.4s;
-      }
-  
-      .social i:nth-of-type(2) {
-        -webkit-transition-delay: 0.3s;
-        transition-delay: 0.3s;
-      }
-  
-      .social i:nth-of-type(3) {
-        -webkit-transition-delay: 0.2s;
-        transition-delay: 0.2s;
-      }
-  
-      .social i:nth-of-type(4) {
-        -webkit-transition-delay: 0.1s;
-        transition-delay: 0.1s;
-      }
-  
-      &:hover i {
-        opacity: 1;
-        -webkit-transform: scale(1);
-        transform: scale(1);
-      }
+      // p {
+      //   z-index: 99;
+      //   position: absolute;
+      //   top: 20px;
+      //   right: 70px;
+      //   color: #333;
+      //   opacity: 0.7;
+      //   font-size: 12px;
+      //   letter-spacing: 1px;
+      //   writing-mode: vertical-lr;
+      //   -webkit-transition: all 0.2s ease;
+      //   transition: all 0.2s ease;
+      // }
+
+      // .pic {
+      //   z-index: 100;
+      //   width: 60vw;
+      //   height: 45vh;
+      //   background-image: url($img-url);
+      //   background-position: center center;
+      //   background-size: cover;
+      //   filter: grayscale(30%);
+      // }
   
       button {
         position: absolute;
         right: 14px;
         bottom: 14px;
-        width: 30px;
-        height: 30px;
+        width: 20px;
+        height: 20px;
         background-color: $orange;
         border: none;
         border-radius: 30px;
@@ -187,15 +149,11 @@
         outline:none;
         transition: all 0.3s ease;
         mix-blend-mode: hard-light;
-  
-        i {
-          font-size: 3rem;
-        }
       }
 
       &:hover {
-        width: 820px;
-        height: 300px;
+        width: 55vw;
+        height: 42vh;
         transition-duration: 2s;
         .pic {
           width: 820px;
@@ -214,25 +172,15 @@
       
       &:hover .pic {
         filter: grayscale(0);
-        
       }
     }
     
     .card2 {
-      .pic {
-        background-image: url($img-url2);
-      }
+      background-image: url($img-url2);
       button {
         background-color: $blue;
       }
     }
-  }
-  
-  .dr {
-  position: absolute;
-    bottom: 16px; 
-    right: 16px;
-    width:100px;
   }
 }
 
