fix syntax error

--- a/src/components/Student/Student.scss
+++ b/src/components/Student/Student.scss
@@ -37,6 +37,7 @@
     background-color: white;
     padding: 8px 0 0 10px;
     color: #403866;
+    box-shadow: 0 0 6px 1.5px #888888;
   }
 
   .screen_container {
