--- a/src/components/Schedule/Schedule.scss
+++ b/src/components/Schedule/Schedule.scss
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 #lecturer {
     background: linear-gradient(35deg,#9a12b3,#c5eff7);
-    height: 100vh;
-    width: 100vw;
     display: flex;
     flex-direction: row;
     svg {
@@ -14,6 +12,12 @@
         fill: #fff;
     }
     #lecturer-menu {
+        #lecturer-menu-buttons {
+            height: 300px;
+        }
+        #lecturer-menu-courselist {
+            height: calc(100% - 300px);
+        }
         width: 0%;
         transition: width 1s;
         visibility: hidden;
