--- a/src/components/Schedule/Table.scss
+++ b/src/components/Schedule/Table.scss
@@ -10,7 +10,6 @@
     text-align: center;
     .container {
         width: 90%;
-        position: relative;
         transform: translate(0%, 0%);
         table {
             td {
@@ -21,9 +20,9 @@
                 height: 30px;
             }
             width: 100%;
-            overflow: hidden;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            th, td {
+            th,
+            td {
                 padding: 15px;
                 background-color: rgba(255, 255, 255, 0.2);
                 color: #fff;
@@ -34,19 +33,23 @@
                     font-size: 15px;
                 }
             }
-              
-            tr:hover {
-            background-color: rgba(255,255,255,0.3);;
-            }
-              
-            td, th {
+
+            td,
+            th {
                 position: relative;
             }
+
+            overflow: hidden;
+
+            tr:hover {
+                background-color: rgba(255, 255, 255, 0.3);
+            }
+
             td:hover::after,
             th:hover::after {
                 content: "";
                 position: absolute;
-                background-color: rgba(255,255,255,0.2);
+                background-color: rgba(255, 255, 255, 0.2);
                 left: 0;
                 top: -50000px;
                 height: 100000px;
