--- a/src/components/Student/StudentID.scss
+++ b/src/components/Student/StudentID.scss
@@ -6,7 +6,6 @@
   height: 100vh;
   margin: 0;
   overflow: hidden;
-  width: 100vw;
   input::-webkit-outer-spin-button,
   input::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -17,7 +16,7 @@
     flex-direction: column;
   }
 
-  p{
+  .text-description{
     color: red;
     font-style: italic;
   }
@@ -28,11 +27,11 @@
     width: 80%;
     margin: 0 auto;
     align-items: center;
-    height: 450px;
+    height: 90vh;
   }
 
   h1 {
-    margin: 150px auto 80px auto;
+    margin: 18vh auto 80px auto;
     font-size: 40px;
   }
 
@@ -66,8 +65,7 @@
     background: none;
     border: none;
     box-sizing: border-box;
-    margin: 0;
-    padding: 1em 1em;
+    // padding: 1em 1em;
     border-image: linear-gradient(to right, $primary, $secondary);
     // Using inset box-shadow instead of border for sizing simplicity
     box-shadow: inset 0 0 0 2px black;
@@ -90,6 +88,7 @@
 
   .button-submit,
   .back-button {
+    width: 9%;
     outline: none;
     transition: color 0.25s;
     text-transform: uppercase;
@@ -147,9 +146,18 @@
     width: 8%;
     margin: 5px 0 0 5px;
     font-size: 14px;
-    padding: 8px 0 0 12px;
     height: 40px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 40px;
+    justify-content: center;
   }
+
+  .button-text{
+    margin: 0;
+  }
+
+  
 
   .form__group {
     position: relative;
