--- a/src/components/Student/Student.scss
+++ b/src/components/Student/Student.scss
@@ -1,7 +1,7 @@
 #student-component{
   font-family: Arial, Helvetica, sans-serif;
   background: linear-gradient(0deg, #ffffff, #f37d7d);
-  height: 100%;
+  height: 100vh;
   margin: 0;
   overflow: hidden;
 
@@ -43,6 +43,7 @@
   .screen_container {
     display: flex;
     flex-direction: row;
+    padding-bottom: 7px;
   }
 
   form {
