--- a/src/components/Student/StudentExam.scss
+++ b/src/components/Student/StudentExam.scss
@@ -1,7 +1,7 @@
 #studentExam-component{
     font-family: Arial, Helvetica, sans-serif;
     background: linear-gradient(0deg, #a8edea, #fed6e3);
-    height: 100%;
+    height: 100vh;
     margin: 0;
     overflow: hidden;
   
