--- a/src/components/Student/Student.scss
+++ b/src/components/Student/Student.scss
@@ -143,6 +143,7 @@
   .button-reset{
     margin: 20px auto;
     margin-right: 3%;
+    padding: 14px 20px;
     text-transform: uppercase;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
     transition: all 0.35s ease 0s;
